# focus-agent

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  README.zh-CN.md  SECURITY.md  compose.prod.yaml  compose.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  skills-lock.json
.github/: PULL_REQUEST_TEMPLATE.md
docker/: entrypoint.sh
docs/: README.md  agent-roadmap.md  agent-role-routing.md  agent-team-workbench.md  architecture.md  context-window.md  current-roadmap.md  development.md  development.zh-CN.md  docker-deployment.md  frontend-refactor-design.md  license-guide.md  local-model-config.example.md  local.env.example  memory-system.md  models.example.toml  multi-agent-collaboration.md  observability-runbook.md  quick-start.md  quick-start.zh-CN.md  release-checklist.md  roadmap.md  skill-system-design.md  tool-skill-design.md  tools.example.toml
frontend-sdk/: README.md  package.json  tsconfig.json
scripts/: agent_governance_report.py  check_contracts.py  memory_context_eval.py  nightly_regression.py  observability_ui_smoke.py  otel_smoke.py  postgres_ops.py  production_smoke.py  release_evidence.py  release_gate.py  release_health_check.py  run-api.sh  serve-common.sh  serve-dev.sh  serve-prod.sh  serve.sh  ui_smoke_test.py
tests/: test_agent_context_engineering.py  test_agent_delegation.py  test_agent_governance.py  test_agent_governance_report.py  test_agent_roles.py  test_agent_task_ledger.py  test_agent_team_api.py  test_agent_team_frontend_contract.py  test_api_middleware.py  (+59 more)
(+240 files in other folders)
